// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`routes/Notifications.tsx should render itself & its children (all read notifications) 1`] = `<AllRead />`;

exports[`routes/Notifications.tsx should render itself & its children (error conditions - oops) bad credentials 1`] = `
<Oops
  error={
    {
      "descriptions": [
        "Your credentials are either invalid or expired.",
      ],
      "emojis": [
        "🔓",
      ],
      "title": "Bad Credentials",
    }
  }
/>
`;

exports[`routes/Notifications.tsx should render itself & its children (error conditions - oops) default error 1`] = `
<Oops
  error={
    {
      "descriptions": [
        "Please try again later.",
      ],
      "emojis": [
        "🤔",
        "😞",
        "😤",
        "😱",
        "😭",
      ],
      "title": "Oops! Something went wrong",
    }
  }
/>
`;

exports[`routes/Notifications.tsx should render itself & its children (error conditions - oops) missing scopes 1`] = `
<Oops
  error={
    {
      "descriptions": [
        "Your credentials are missing a required API scope.",
      ],
      "emojis": [
        "🙃",
      ],
      "title": "Missing Scopes",
    }
  }
/>
`;

exports[`routes/Notifications.tsx should render itself & its children (error conditions - oops) rate limited 1`] = `
<Oops
  error={
    {
      "descriptions": [
        "Please wait a while before trying again.",
      ],
      "emojis": [
        "😮‍💨",
      ],
      "title": "Rate Limited",
    }
  }
/>
`;

exports[`routes/Notifications.tsx should render itself & its children (error conditions - oops) unknown error 1`] = `
<Oops
  error={
    {
      "descriptions": [
        "Please try again later.",
      ],
      "emojis": [
        "🤔",
        "😞",
        "😤",
        "😱",
        "😭",
      ],
      "title": "Oops! Something went wrong",
    }
  }
/>
`;

exports[`routes/Notifications.tsx should render itself & its children (show account hostname) 1`] = `
<div
  className="flex flex-col flex-1 bg-white dark:bg-gray-dark"
>
  <AccountNotifications
    hostname="github.com"
    notifications={
      [
        {
          "hostname": "https://api.github.com",
          "html_url": "https://api.github.com/repos/gitify-app/notifications-test/issues/1",
          "icon": {
            "color": "text-green-500",
            "type": {
              "$$typeof": Symbol(react.forward_ref),
              "render": [Function],
            },
          },
          "id": "1",
          "reason": {
            "code": "subscribed",
            "description": "You are subscribed to this thread",
            "type": "subscribed",
          },
          "repository": {
            "avatar_url": "https://avatars.githubusercontent.com/u/133795385?s=200&v=4",
            "full_name": "gitify-app/notifications-test",
            "html_url": "https://github.com/gitify-app/notifications-test",
            "owner": {
              "avatar_url": "https://avatars.githubusercontent.com/u/133795385?s=200&v=4",
            },
          },
          "state": "open",
          "title": "I am a robot and this is a test!",
          "type": "Issue",
          "unread": true,
          "updated_at": {
            "formatted": "May 1st, 2024",
            "raw": "2024-05-01T10:00:00Z",
          },
          "user": {
            "avatar_url": "https://avatars.githubusercontent.com/u/583231?v=4",
            "html_url": "https://github.com/mockUser",
            "login": "mockUser",
            "type": "User",
          },
        },
        {
          "hostname": "https://api.github.com",
          "html_url": "https://github.com/repos/gitify-app/notifications-test/pulls/2",
          "icon": {
            "color": "text-purple-500",
            "type": {
              "$$typeof": Symbol(react.forward_ref),
              "render": [Function],
            },
          },
          "id": "2",
          "reason": {
            "code": "author",
            "description": "You created this thread",
            "type": "author",
          },
          "repository": {
            "avatar_url": "https://avatars.githubusercontent.com/u/133795385?s=200&v=4",
            "full_name": "gitify-app/notifications-test",
            "html_url": "https://github.com/gitify-app/notifications-test",
            "owner": {
              "avatar_url": "https://avatars.githubusercontent.com/u/133795385?s=200&v=4",
            },
          },
          "state": "merged",
          "title": "Improve the UI",
          "type": "Pull Request",
          "unread": true,
          "updated_at": {
            "formatted": "May 1st, 2024",
            "raw": "2024-05-01T10:00:00Z",
          },
          "user": {
            "avatar_url": "https://avatars.githubusercontent.com/u/583231?v=4",
            "html_url": "https://github.com/mockUser",
            "login": "mockUser",
            "type": "User",
          },
        },
      ]
    }
    showAccountHostname={true}
  />
</div>
`;

exports[`routes/Notifications.tsx should render itself & its children (with notifications) 1`] = `
<div
  className="flex flex-col flex-1 bg-white dark:bg-gray-dark"
>
  <AccountNotifications
    hostname="github.com"
    notifications={
      [
        {
          "hostname": "https://api.github.com",
          "html_url": "https://api.github.com/repos/gitify-app/notifications-test/issues/1",
          "icon": {
            "color": "text-green-500",
            "type": {
              "$$typeof": Symbol(react.forward_ref),
              "render": [Function],
            },
          },
          "id": "1",
          "reason": {
            "code": "subscribed",
            "description": "You are subscribed to this thread",
            "type": "subscribed",
          },
          "repository": {
            "avatar_url": "https://avatars.githubusercontent.com/u/133795385?s=200&v=4",
            "full_name": "gitify-app/notifications-test",
            "html_url": "https://github.com/gitify-app/notifications-test",
            "owner": {
              "avatar_url": "https://avatars.githubusercontent.com/u/133795385?s=200&v=4",
            },
          },
          "state": "open",
          "title": "I am a robot and this is a test!",
          "type": "Issue",
          "unread": true,
          "updated_at": {
            "formatted": "May 1st, 2024",
            "raw": "2024-05-01T10:00:00Z",
          },
          "user": {
            "avatar_url": "https://avatars.githubusercontent.com/u/583231?v=4",
            "html_url": "https://github.com/mockUser",
            "login": "mockUser",
            "type": "User",
          },
        },
        {
          "hostname": "https://api.github.com",
          "html_url": "https://github.com/repos/gitify-app/notifications-test/pulls/2",
          "icon": {
            "color": "text-purple-500",
            "type": {
              "$$typeof": Symbol(react.forward_ref),
              "render": [Function],
            },
          },
          "id": "2",
          "reason": {
            "code": "author",
            "description": "You created this thread",
            "type": "author",
          },
          "repository": {
            "avatar_url": "https://avatars.githubusercontent.com/u/133795385?s=200&v=4",
            "full_name": "gitify-app/notifications-test",
            "html_url": "https://github.com/gitify-app/notifications-test",
            "owner": {
              "avatar_url": "https://avatars.githubusercontent.com/u/133795385?s=200&v=4",
            },
          },
          "state": "merged",
          "title": "Improve the UI",
          "type": "Pull Request",
          "unread": true,
          "updated_at": {
            "formatted": "May 1st, 2024",
            "raw": "2024-05-01T10:00:00Z",
          },
          "user": {
            "avatar_url": "https://avatars.githubusercontent.com/u/583231?v=4",
            "html_url": "https://github.com/mockUser",
            "login": "mockUser",
            "type": "User",
          },
        },
      ]
    }
    showAccountHostname={true}
  />
  <AccountNotifications
    hostname="github.gitify.io"
    notifications={
      [
        {
          "hostname": "https://github.gitify.io/api/v3",
          "html_url": "https://github.gitify.io/repos/myorg/notifications-test/releases/3",
          "icon": {
            "color": "text-gray-500 dark:text-gray-300",
            "type": {
              "$$typeof": Symbol(react.forward_ref),
              "render": [Function],
            },
          },
          "id": "3",
          "reason": {
            "code": "subscribed",
            "description": "You are subscribed to this thread",
            "type": "subscribed",
          },
          "repository": {
            "avatar_url": "https://github.gitify.io/avatars/u/4?",
            "full_name": "myorg/notifications-test",
            "html_url": "https://github.gitify.io/myorg/notifications-test",
            "owner": {
              "avatar_url": "https://github.gitify.io/avatars/u/4?",
            },
          },
          "state": null,
          "title": "Release 0.0.1",
          "type": "Release",
          "unread": true,
          "updated_at": {
            "formatted": "May 1st, 2024",
            "raw": "2024-05-01T10:00:00Z",
          },
          "user": {
            "avatar_url": "https://avatars0.githubusercontent.com/u/6333409?v=3",
            "html_url": "https://github.com/mockUser",
            "login": "mockUser",
            "type": "User",
          },
        },
        {
          "hostname": "https://github.gitify.io/api/v3",
          "html_url": "https://github.gitify.io/repos/myorg/notifications-test/pulls/4",
          "icon": {
            "color": "text-green-500",
            "type": {
              "$$typeof": Symbol(react.forward_ref),
              "render": [Function],
            },
          },
          "id": "4",
          "reason": {
            "code": "subscribed",
            "description": "You are subscribed to this thread",
            "type": "subscribed",
          },
          "repository": {
            "avatar_url": "https://github.gitify.io/avatars/u/4?",
            "full_name": "myorg/notifications-test",
            "html_url": "https://github.gitify.io/myorg/notifications-test",
            "owner": {
              "avatar_url": "https://github.gitify.io/avatars/u/4?",
            },
          },
          "state": "open",
          "title": "Bump version",
          "type": "PullRequest",
          "unread": true,
          "updated_at": {
            "formatted": "May 1st, 2024",
            "raw": "2024-05-01T10:00:00Z",
          },
          "user": {
            "avatar_url": "https://avatars0.githubusercontent.com/u/6333409?v=3",
            "html_url": "https://github.com/mockUser",
            "login": "mockUser",
            "type": "User",
          },
        },
      ]
    }
    showAccountHostname={true}
  />
</div>
`;
